Change category slides to tags

--- a/_posts/2012-05-25-slides-from-talk-decoupled-library-packages-for-php.html
+++ b/_posts/2012-05-25-slides-from-talk-decoupled-library-packages-for-php.html
@@ -1,8 +1,8 @@
 ---
 title: Slides from Decoupled Library Packages for PHP 5.4 at PHP | Tek 12
 layout: post
-category : auraphp, slides
-tags : [blog]
+category : auraphp
+tags : [blog, slides]
 ---
 {% include JB/setup %}
 
