update home page

--- a/talks.html
+++ b/talks.html
@@ -6,7 +6,7 @@ tags : [blog]
 ---
 {% include JB/setup %}
 
-Below is the slide from the talk given by Paul M Jones at PHP Tek 12. 
-If you was there, please give him feedback [http://joind.in/talk/view/6495](http://joind.in/talk/view/6495).
+Below are the slides from the talk given by Paul M Jones at PHP Tek 12. 
+If you were there, please give feedback on the talk: [http://joind.in/talk/view/6495](http://joind.in/talk/view/6495).
 
 <iframe src="http://www.slideshare.net/slideshow/embed_code/13065200" width="425" height="355" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" allowfullscreen></iframe>
