add author front-matter

--- a/_posts/2012-05-25-slides-from-talk-decoupled-library-packages-for-php.html
+++ b/_posts/2012-05-25-slides-from-talk-decoupled-library-packages-for-php.html
@@ -3,6 +3,7 @@ title: Slides from Decoupled Library Packages for PHP 5.4 at PHP | Tek 12
 layout: post
 category : auraphp
 tags : [blog, slides]
+author : Hari KT
 ---
 {% include JB/setup %}
 
