prep for new packages documentation

--- a/community.html
+++ b/community.html
@@ -1,7 +1,7 @@
 ---
 layout: site
 active: contact
-title: Aura for PHP &#58; Community
+title: Aura for PHP -- Community
 ---
 
 <h1>Community</h1>
