Update contributors list and use the real name

--- a/contributors/index.html
+++ b/contributors/index.html
@@ -27,7 +27,7 @@ title: Aura contributors
                 contributors += '</a></div>';
                 contributors += '<a lang="en" rel="contact colleague" href="';
                 contributors += value.html_url;
-                contributors += '">' + index + '</a>';
+                contributors += '">' + value.name + '</a>';
                 contributors += '</div>';
             });
             $('.contributors-list').html(contributors);
