Add stackoverflow in the community list

--- a/community.html
+++ b/community.html
@@ -10,3 +10,6 @@ title: Aura for PHP | Community
 <a href="http://groups.google.com/group/auraphp">http://groups.google.com/group/auraphp</a>.</p>
 
 <p>Chat with us using IRC on Freenode at <code>#auraphp</code>.</p>
+
+<p>You can also ask questions over <a href="http://stackoverflow.com">stackoverflow.com</a> 
+tagged with <a href="http://stackoverflow.com/tags/auraphp">auraphp</a></p>
