--- a/contributing.html
+++ b/contributing.html
@@ -40,7 +40,7 @@ cd {$REPO}
 <pre><code>git checkout develop-2
 git branch {$WORKING_BRANCH}
 git checkout {$WORKING_BRANCH}
-git push --set-upstream origin/{$WORKING_BRANCH}
+git push --set-upstream origin {$WORKING_BRANCH}
 </code></pre>
 
     </li>
