exceptions are exempt from factory rule

--- a/contributing.html
+++ b/contributing.html
@@ -123,7 +123,7 @@ git merge upstream/develop-2
         <p>Maintain 100% test coverage.</p>
     </li>
     <li>
-        <p>A class should <em>either</em> create objects <em>or</em> operate on those objects, never both. This means the <code>new</code> keyword should be used only in Factories and Builders. (The built-in PHP classes are exempt from this rule.)</p>
+        <p>A class should <em>either</em> create objects <em>or</em> operate on those objects, never both. This means the <code>new</code> keyword should be used only in Factories and Builders. (The built-in PHP classes, as well as all exceptions, are exempt from this rule)</p>
     </li>
     <li>
         <p>Default to explicit configuration rather than implicit convention.</p>
