proper location of json file

--- a/community.html
+++ b/community.html
@@ -21,7 +21,7 @@ title: Aura for PHP | Community
 <script type="text/javascript">
     $(function() {
         $.ajax({
-            url: "http://auraphp.com/contributors/contributors.json",
+            url: "http://auraphp.com/contributors.json",
             type: "GET"
         })
         .done(function(data) {
