use id, not name, for linking

--- a/community.html
+++ b/community.html
@@ -13,7 +13,7 @@ title: Aura for PHP | Community
 
 <p>You can also ask questions at <a href="http://stackoverflow.com">stackoverflow.com</a>; be sure to tag them with <a href="http://stackoverflow.com/tags/auraphp">auraphp</a>!</p>
 
-<h2 name="contributors">Meet The Contributors</h2>
+<h2 id="contributors">Meet The Contributors</h2>
 
 <div class="contributors-list"></div>
 <div class="clearfix"></div>
