extract contributors js

--- a/community.html
+++ b/community.html
@@ -13,62 +13,6 @@ title: Aura for PHP | Community
 
 <p>You can also ask questions at <a href="http://stackoverflow.com">stackoverflow.com</a>; be sure to tag them with <a href="http://stackoverflow.com/tags/auraphp">auraphp</a>!</p>
 
-<h2 id="contributors">Meet The Contributors</h2>
-
-<div class="contributors-list"></div>
-<div class="clearfix"></div>
-<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-<script type="text/javascript">
-    $(function() {
-        $.ajax({
-            url: "/contributors.json",
-            type: "GET"
-        })
-        .done(function(data) {
-            contributors = '';
-            window.datum = data;
-            data = suffleObjects(data);
-            $.each(data, function( index, value ) {
-                contributors += '<div class="span3 contributor">';
-                contributors += '<div class="contributor_thumbnail">';
-                contributors += '<a href="';
-                contributors += value.html_url + '" >';
-                contributors += '<img height="50" width="50" alt="';
-                contributors += index + '" src="';
-                contributors += value.avatar_url + '">';
-                contributors += '</a></div>';
-                contributors += '<a lang="en" rel="contact colleague" href="';
-                contributors += value.html_url;
-                contributors += '">' + value.name + '</a>';
-                contributors += '</div>';
-            });
-            $('.contributors-list').html(contributors);
-        });
-    });
-
-    function suffleObjects(objectList) {
-        var keys = getKeys(objectList);
-        var result = {};
-        keys = shuffle(keys);
-        for(var i=0; i < keys.length; i++) {
-            result[keys[i]] = objectList[keys[i]];
-        }
-        return result;
-    }
-
-    function shuffle(o){
-        for(var j, x, i = o.length; i; j = Math.floor(Math.random() * i), x = o[--i], o[i] = o[j], o[j] = x);
-        return o;
-    };
-
-    function getKeys(object) {
-        if(Object.keys) {
-            return Object.keys(object);
-        }
-        var keys = [];
-        for(key in object) {
-            keys.push(key);
-        }
-        return keys;
-    }
-</script>
+<h2>Contributors</h2>
+<div id="contributors"></div>
+<script src="/contributors.js" type="text/javascript"></script>
