--- a/community.html
+++ b/community.html
@@ -15,4 +15,4 @@ title: Aura for PHP | Community
 
 <h2>Contributors</h2>
 <div id="contributors"></div>
-<script src="/contributors.js" type="text/javascript"></script>
+<script src="/js/contributors.js" type="text/javascript"></script>
