--- a/community.html
+++ b/community.html
@@ -16,3 +16,4 @@ title: Aura for PHP | Community
 <h2>Contributors</h2>
 <div id="contributors"></div>
 <script src="/js/contributors.js" type="text/javascript"></script>
+<div class="clearfix"></div>
