--- a/contributing.html
+++ b/contributing.html
@@ -141,7 +141,7 @@ git merge upstream/2.x
         <p>Compose functionality through dependency injection, rather than through inheritance and base classes.</p>
     </li>
     <li>
-        <p>Make effective and reasonable usage of closures and callable objects, especially for object creation factories.</p>
+        <p>Make effective and reasonable use of closures and callable objects, especially for object creation factories.</p>
     </li>
     <li>
         <p>Keep the README updated with any new or changed features.</p>
