try to add highlighting

--- a/packages/Aura.Router/defining-routes.html
+++ b/packages/Aura.Router/defining-routes.html
@@ -3,7 +3,7 @@ layout: site
 active: home
 title: Defining Routes
 ---
-
+<script>hljs.initHighlightingOnLoad();</script>
 
 <nav class="navheader">
     <table>
