--- a/packages/index.html
+++ b/packages/index.html
@@ -3,7 +3,7 @@ layout: site
 active: home
 title: Aura 3.x Packages
 ---
-
+<script>hljs.initHighlightingOnLoad();</script>
 
 <nav class="navheader">
     <table>
