--- a/packages/Aura.Router/advanced-topics.html
+++ b/packages/Aura.Router/advanced-topics.html
@@ -3,7 +3,7 @@ layout: site
 active: home
 title: Advanced Topics
 ---
-
+<script>hljs.initHighlightingOnLoad();</script>
 
 <nav class="navheader">
     <table>
