--- a/packages/Aura.Router/attaching-route-groups.html
+++ b/packages/Aura.Router/attaching-route-groups.html
@@ -3,7 +3,7 @@ layout: site
 active: home
 title: Attaching Route Groups
 ---
-
+<script>hljs.initHighlightingOnLoad();</script>
 
 <nav class="navheader">
     <table>
