--- a/packages/Aura.Router/generating-paths.html
+++ b/packages/Aura.Router/generating-paths.html
@@ -3,7 +3,7 @@ layout: site
 active: home
 title: Generating Paths From Routes
 ---
-
+<script>hljs.initHighlightingOnLoad();</script>
 
 <nav class="navheader">
     <table>
