--- a/packages/Aura.Router/getting-started.html
+++ b/packages/Aura.Router/getting-started.html
@@ -3,7 +3,7 @@ layout: site
 active: home
 title: Getting Started
 ---
-
+<script>hljs.initHighlightingOnLoad();</script>
 
 <nav class="navheader">
     <table>
