--- a/packages/Aura.Router/index.html
+++ b/packages/Aura.Router/index.html
@@ -3,7 +3,7 @@ layout: site
 active: home
 title: Aura.Router
 ---
-
+<script>hljs.initHighlightingOnLoad();</script>
 
 <nav class="navheader">
     <table>
