--- a/packages/Aura.Router/advanced-topics.html
+++ b/packages/Aura.Router/advanced-topics.html
@@ -76,6 +76,7 @@ if (file_exists($cache)) {
 <p>TBD</p>
 <h2 id="1.5.4">1.5.4. Custom Matching Rules</h2>
 <p>TBD</p>
+<h2 id="1.5.5">1.5.5. Customizing The Container</h2>
 
 <nav class="navfooter">
     <table>
