--- a/packages/Aura.Router/generating-paths.html
+++ b/packages/Aura.Router/generating-paths.html
@@ -23,7 +23,7 @@ title: Generating Paths From Routes
 $generator = $routerContainer-&gt;getGenerator();
 ?&gt;
 </code></pre>
-<p>You can then call <code>Generagor::generate()</code> with the route name and optional attributes to use for named placeholder tokens.</p>
+<p>You can then call <code>Generator::generate()</code> with the route name and optional attributes to use for named placeholder tokens.</p>
 <pre><code class="language-php">&lt;?php
 $path = $generator-&gt;generate('blog.read', ['id' =&gt; 42]);
 $href = htmlspecialchars($path, ENT_QUOTES, 'UTF-8');
@@ -37,16 +37,16 @@ echo "&lt;a href=\"{$href}\"&gt;Blog link&lt;/a&gt;";
 <p>If you <code>generate()</code> a path from a route with optional attributes, the attributes will be filled in if they are present in the data for the link. Remember, the optional attributes are <em>sequentially</em> optional, so the attributes will not be filled in after the first missing one:</p>
 <pre><code class="language-php">&lt;?php
 $map-&gt;route('archive', '/archive{/year,month,day}')
-    -&gt;tokens(array(
+    -&gt;tokens([
         'year'  =&gt; '\d{4}',
         'month' =&gt; '\d{2}',
         'day'   =&gt; '\d{2}'
-    ));
+    ]);
 
-$link = $generator-&gt;generate('archive', array(
+$link = $generator-&gt;generate('archive', [
     'year' =&gt; '1979',
     'month' =&gt; '11',
-)); // "/archive/1979/11"
+]); // "/archive/1979/11"
 ?&gt;
 </code></pre>
 <h2 id="1.4.2">1.4.2. Wildcard Attributes</h2>
@@ -56,14 +56,14 @@ will be used for the trailing arbitrary attribute values:</p>
 $map-&gt;route('wild_post', '/post/{id}')
     -&gt;wildcard('other');
 
-$link = $generator-&gt;generate('wild_post', array(
+$link = $generator-&gt;generate('wild_post', [
     'id' =&gt; '88',
-    'other' =&gt; array(
+    'other' =&gt; [
         'foo',
         'bar',
         'baz',
-    );
-)); // "/post/88/foo/bar/baz"
+    ]
+]); // "/post/88/foo/bar/baz"
 ?&gt;
 </code></pre>
 
