--- a/packages/Aura.Router/index.html
+++ b/packages/Aura.Router/index.html
@@ -52,6 +52,7 @@ title: Aura.Router
 <dt>1.5.2. <a href="/packages/Aura.Router/advanced-topics.html#1.5.2">Caching Routes</a></dt>
 <dt>1.5.3. <a href="/packages/Aura.Router/advanced-topics.html#1.5.3">Extending the Map and Route Classes</a></dt>
 <dt>1.5.4. <a href="/packages/Aura.Router/advanced-topics.html#1.5.4">Custom Matching Rules</a></dt>
+<dt>1.5.5. <a href="/packages/Aura.Router/advanced-topics.html#1.5.5">Customizing The Container</a></dt>
 </dl></dd>
 </dl>
 
