--- a/packages/index.html
+++ b/packages/index.html
@@ -54,6 +54,7 @@ title: Aura 3.x Packages
 <dt>1.5.2. <a href="/packages/Aura.Router/advanced-topics.html#1.5.2">Caching Routes</a></dt>
 <dt>1.5.3. <a href="/packages/Aura.Router/advanced-topics.html#1.5.3">Extending the Map and Route Classes</a></dt>
 <dt>1.5.4. <a href="/packages/Aura.Router/advanced-topics.html#1.5.4">Custom Matching Rules</a></dt>
+<dt>1.5.5. <a href="/packages/Aura.Router/advanced-topics.html#1.5.5">Customizing The Container</a></dt>
 </dl></dd>
 </dl></dd>
 </dl>
