--- a/packages/Aura.Router/index.html
+++ b/packages/Aura.Router/index.html
@@ -37,8 +37,9 @@ title: Aura.Router
 <dt>1.2.6. <a href="/packages/Aura.Router/defining-routes.html#1.2.6">Multiple HTTP Verbs</a></dt>
 <dt>1.2.7. <a href="/packages/Aura.Router/defining-routes.html#1.2.7">Secure Protocols</a></dt>
 <dt>1.2.8. <a href="/packages/Aura.Router/defining-routes.html#1.2.8">Non-Routable Routes</a></dt>
-<dt>1.2.9. <a href="/packages/Aura.Router/defining-routes.html#1.2.9">Custom Extras</a></dt>
-<dt>1.2.10. <a href="/packages/Aura.Router/defining-routes.html#1.2.10">Default Map Route Specifications</a></dt>
+<dt>1.2.9. <a href="/packages/Aura.Router/defining-routes.html#1.2.9">Authentication</a></dt>
+<dt>1.2.10. <a href="/packages/Aura.Router/defining-routes.html#1.2.10">Custom Extras</a></dt>
+<dt>1.2.11. <a href="/packages/Aura.Router/defining-routes.html#1.2.11">Default Map Route Specifications</a></dt>
 </dl></dd>
 <dt>1.3. <a href="/packages/Aura.Router/attaching-route-groups.html#1.3">Attaching Route Groups</a></dt>
 <dt>1.4. <a href="/packages/Aura.Router/generating-paths.html#1.4">Generating Paths From Routes</a></dt>
@@ -50,9 +51,8 @@ title: Aura.Router
 <dd><dl>
 <dt>1.5.1. <a href="/packages/Aura.Router/advanced-topics.html#1.5.1">Catchall Routes</a></dt>
 <dt>1.5.2. <a href="/packages/Aura.Router/advanced-topics.html#1.5.2">Caching Routes</a></dt>
-<dt>1.5.3. <a href="/packages/Aura.Router/advanced-topics.html#1.5.3">Extending the Map and Route Classes</a></dt>
-<dt>1.5.4. <a href="/packages/Aura.Router/advanced-topics.html#1.5.4">Custom Matching Rules</a></dt>
-<dt>1.5.5. <a href="/packages/Aura.Router/advanced-topics.html#1.5.5">Customizing The Container</a></dt>
+<dt>1.5.3. <a href="/packages/Aura.Router/advanced-topics.html#1.5.3">Custom Matching Rules</a></dt>
+<dt>1.5.4. <a href="/packages/Aura.Router/advanced-topics.html#1.5.4">Extending the Map Class</a></dt>
 </dl></dd>
 </dl>
 
