--- a/packages/Aura.Router/defining-routes.html
+++ b/packages/Aura.Router/defining-routes.html
@@ -37,10 +37,12 @@ $map-&gt;get('blog.read', '/blog/{id}{format}')
 ?&gt;
 </code></pre>
 <p>If no default value is specified for a placeholder token, the corresponding attribute value will be <code>null</code>. To set your own default values, call the <code>defaults()</code> method.</p>
-<pre><code class="language-php">$map-&gt;post('blog.archive', '/blog/{id}{format}')
+<pre><code class="language-php">&lt;?php
+$map-&gt;post('blog.archive', '/blog/{id}{format}')
     -&gt;defaults([
         'format' =&gt; '.html',
     ]);
+?&gt;
 </code></pre>
 <h2 id="1.2.2">1.2.2. Optional Placeholder Tokens</h2>
 <p>Sometimes it is useful to have a route with optional placeholder tokens for attributes. None, some, or all of the optional values may be present, and the route will still match.</p>
@@ -97,47 +99,68 @@ $map-&gt;get('wild', '/wild')
 </ul>
 <h2 id="1.2.4">1.2.4. Host Matching</h2>
 <p>You can limit a route to specific hosts with the <code>host()</code> method and a regular expression. The following example will only match when the request is on <code>example.com</code> domain:</p>
-<pre><code class="language-php">$map-&gt;get('blog.browse', '/blog')
+<pre><code class="language-php">&lt;?php
+$map-&gt;get('blog.browse', '/blog')
     -&gt;host('example.com');
+?&gt;
 </code></pre>
 <p>(Dots in the regular expression will automatically be escaped for you.)</p>
 <p>You can use placeholder tokens and default values in the host specification, and capture those values into route attributes. The following matches <code>*.example.com</code> and captures the subdomain value as a route attribute:</p>
-<pre><code class="language-php">$map-&gt;get('blog.browse', '/blog')
+<pre><code class="language-php">&lt;?php
+$map-&gt;get('blog.browse', '/blog')
     -&gt;host('{subdomain}.?example.com');
+?&gt;
 </code></pre>
 <h2 id="1.2.5">1.2.5. Accept Headers</h2>
 <p>The <code>accepts()</code> method adds to a list of content types that the route handler can be expected to return.</p>
-<pre><code class="language-php">$map-&gt;get('blog.browse', '/blog')
+<pre><code class="language-php">&lt;?php
+$map-&gt;get('blog.browse', '/blog')
     -&gt;accepts([
         'application/json',
         'application/xml',
         'text/csv',
     ]);
+?&gt;
 </code></pre>
 <p>Note that this is <em>not</em> a content negotiation method. It is only a pro-forma check to see if one of the specified types is present in the <code>Accept</code> header with a non-zero <code>q</code> value. THe handler, or some other layer, should perform content negotation proper.</p>
 <h2 id="1.2.6">1.2.6. Multiple HTTP Verbs</h2>
 <p>The <code>allows()</code> method adds to the allowed HTTP verbs for the route.</p>
-<pre><code class="language-php">$map-&gt;post('blog.edit', '/blog/{id}')
+<pre><code class="language-php">&lt;?php
+$map-&gt;post('blog.edit', '/blog/{id}')
     -&gt;allows(['PATCH', 'PUT'])
+?&gt;
 </code></pre>
 <h2 id="1.2.7">1.2.7. Secure Protocols</h2>
 <p>You can use the <code>secure()</code> method to specify that a route should only match a secure protcol. (Specifically, <code>$_SERVER['HTTPS']</code> must be on, or the request must be on port 443.)</p>
-<pre><code class="language-php">$map-&gt;post('blog.edit', '/blog/{id}')
+<pre><code class="language-php">&lt;?php
+$map-&gt;post('blog.edit', '/blog/{id}')
     -&gt;secure();
+?&gt;
 </code></pre>
 <p>You can call <code>secure(false)</code> to limit the route to only non-secure protocols. Calling <code>secure(null)</code> causes the route to ignore the protocol security.</p>
 <h2 id="1.2.8">1.2.8. Non-Routable Routes</h2>
 <p>Sometimes you will want to have a route in the <em>Map</em> that is used only for generating paths, and not for matching to handlers.  In this case, you can call <code>isRoutable(false)</code>. (This is rare but useful.)</p>
-<h2 id="1.2.9">1.2.9. Custom Extras</h2>
-<p>Other, custom data about the route can be stored using the <code>extras()</code> method. Pass an array of key-value pairs and it will be merged with any other custom data already stored.</p>
-<pre><code class="language-php">$map-&gt;post('blog.dashboard', '/blog/dashboard')
-    -&gt;extras([
-        'authenticated' =&gt; true,
-        'is_admin' =&gt; true,
+<h2 id="1.2.9">1.2.9. Authentication</h2>
+<p>Each route instance has a special-purpose method and property, <code>auth()</code> and <code>$auth</code>, for you to store authentication/authorization values.  These values are entirely arbitrary, and are best used with custom matching rules of your own design.</p>
+<pre><code class="language-php">&lt;?php
+$map-&gt;post('blog.admin', '/blog/admin')
+    -&gt;auth([
+        'isAdmin' =&gt; true,
     ]);
+?&gt;
+</code></pre>
+<h2 id="1.2.10">1.2.10. Custom Extras</h2>
+<p>Other, custom data about the route can be stored using the <code>extras()</code> method. Pass an array of key-value pairs and it will be merged with any other custom data already stored.</p>
+<pre><code class="language-php">&lt;?php
+$map-&gt;post('blog.other', '/blog/other')
+    -&gt;extras([
+        'foo' =&gt; true,
+        'bar' =&gt; false,
+    ]);
+?&gt;
 </code></pre>
 <p>You can then use these extra values in your own custom matching rules.</p>
-<h2 id="1.2.10">1.2.10. Default Map Route Specifications</h2>
+<h2 id="1.2.11">1.2.11. Default Map Route Specifications</h2>
 <p>You can call any of the above <em>Route</em> methods on the <em>Map</em>. When you do so, the <em>Map</em> will then use those as the defaults for every route you add thereafter. This is useful for defining a base set of placeholder token expressions, default values, and so on.</p>
 <pre><code class="language-php">&lt;?php
 // define defaults for all routes added hereafter
