--- a/packages/Aura.Router/attaching-route-groups.html
+++ b/packages/Aura.Router/attaching-route-groups.html
@@ -1,6 +1,6 @@
 ---
 layout: site
-active: home
+active: packages
 title: Attaching Route Groups
 ---
 <script>hljs.initHighlightingOnLoad();</script>
