--- a/packages/Aura.Router/generating-paths.html
+++ b/packages/Aura.Router/generating-paths.html
@@ -1,6 +1,6 @@
 ---
 layout: site
-active: home
+active: packages
 title: Generating Paths From Routes
 ---
 <script>hljs.initHighlightingOnLoad();</script>
