--- a/packages/Aura.Router/index.html
+++ b/packages/Aura.Router/index.html
@@ -53,6 +53,7 @@ title: Aura.Router
 <dt>1.5.2. <a href="/packages/Aura.Router/advanced-topics.html#1.5.2">Caching Routes</a></dt>
 <dt>1.5.3. <a href="/packages/Aura.Router/advanced-topics.html#1.5.3">Custom Matching Rules</a></dt>
 <dt>1.5.4. <a href="/packages/Aura.Router/advanced-topics.html#1.5.4">Extending the Map Class</a></dt>
+<dt>1.5.5. <a href="/packages/Aura.Router/advanced-topics.html#1.5.5">Logging</a></dt>
 </dl></dd>
 </dl>
 
