update router docs

--- a/packages/Aura.Router/generating-paths.html
+++ b/packages/Aura.Router/generating-paths.html
@@ -13,7 +13,7 @@ title: Generating Paths From Routes
         <tr>
             <td class="prev"><a href="/packages/Aura.Router/attaching-route-groups.html">Attaching Route Groups</a></td>
             <td class="parent">1. Aura.Router</th>
-            <td class="next"><a href="/packages/Aura.Router/advanced-topics.html">Advanced Topics</a></td>
+            <td class="next"><a href="/packages/Aura.Router/custom-maps.html">Custom Maps</a></td>
         </tr>
     </table>
 </nav>
@@ -72,12 +72,12 @@ $link = $generator-&gt;generate('wild_post', [
         <tr>
             <td class="prev"><a href="/packages/Aura.Router/attaching-route-groups.html">Prev</a></td>
             <td class="parent"><a href="/packages/Aura.Router/">Up</a></td>
-            <td class="next"><a href="/packages/Aura.Router/advanced-topics.html">Next</a></td>
+            <td class="next"><a href="/packages/Aura.Router/custom-maps.html">Next</a></td>
         </tr>
         <tr>
             <td class="prev">1.3. Attaching Route Groups</td>
             <td class="parent">1. Aura.Router</td>
-            <td class="next">1.5. Advanced Topics</td>
+            <td class="next">1.5. Custom Maps</td>
         </tr>
     </table>
 </nav>
