--- a/packages/Aura.Router/index.html
+++ b/packages/Aura.Router/index.html
@@ -47,13 +47,20 @@ title: Aura.Router
 <dt>1.4.1. <a href="/packages/Aura.Router/generating-paths.html#1.4.1">Optional Attributes</a></dt>
 <dt>1.4.2. <a href="/packages/Aura.Router/generating-paths.html#1.4.2">Wildcard Attributes</a></dt>
 </dl></dd>
-<dt>1.5. <a href="/packages/Aura.Router/advanced-topics.html#1.5">Advanced Topics</a></dt>
+<dt>1.5. <a href="/packages/Aura.Router/custom-maps.html#1.5">Custom Maps</a></dt>
 <dd><dl>
-<dt>1.5.1. <a href="/packages/Aura.Router/advanced-topics.html#1.5.1">Catchall Routes</a></dt>
-<dt>1.5.2. <a href="/packages/Aura.Router/advanced-topics.html#1.5.2">Caching Routes</a></dt>
-<dt>1.5.3. <a href="/packages/Aura.Router/advanced-topics.html#1.5.3">Custom Matching Rules</a></dt>
-<dt>1.5.4. <a href="/packages/Aura.Router/advanced-topics.html#1.5.4">Extending the Map Class</a></dt>
-<dt>1.5.5. <a href="/packages/Aura.Router/advanced-topics.html#1.5.5">Logging</a></dt>
+<dt>1.5.1. <a href="/packages/Aura.Router/custom-maps.html#1.5.1">Extending the Map Class</a></dt>
+<dt>1.5.2. <a href="/packages/Aura.Router/custom-maps.html#1.5.2">Caching Routes</a></dt>
+</dl></dd>
+<dt>1.6. <a href="/packages/Aura.Router/custom-matching.html#1.6">Custom Matching Rules</a></dt>
+<dd><dl>
+<dt>1.6.1. <a href="/packages/Aura.Router/custom-matching.html#1.6.1">Writing A Custom Rule</a></dt>
+<dt>1.6.2. <a href="/packages/Aura.Router/custom-matching.html#1.6.2">Setting Rules Into The Container</a></dt>
+</dl></dd>
+<dt>1.7. <a href="/packages/Aura.Router/other-topics.html#1.7">Other Topics</a></dt>
+<dd><dl>
+<dt>1.7.1. <a href="/packages/Aura.Router/other-topics.html#1.7.1">Catchall Routes</a></dt>
+<dt>1.7.2. <a href="/packages/Aura.Router/other-topics.html#1.7.2">Logging</a></dt>
 </dl></dd>
 </dl>
 
