--- a/packages/Aura.Router/getting-started.html
+++ b/packages/Aura.Router/getting-started.html
@@ -19,14 +19,14 @@ title: Getting Started
 </nav>
 <h1 id="1.1">1.1. Getting Started</h1>
 <p>Aura.Router is a web router implementation for PSR-7.</p>
-<p>You get all the router objects through a library-specific <em>RouterContainer</em>, so you need to instantiate that first.</p>
+<p>You get all the router objects through a library-specific <em>RouterContainer</em>, which manages object creation, dependencies, and wiring for you. That means you need to instantiate the container before anything else.</p>
 <pre><code class="language-php">&lt;?php
 use Aura\Router\RouterContainer;
 
 $routerContainer = new RouterContainer();
 ?&gt;
 </code></pre>
-<p>You can then retrieve a <em>Map</em> for adding routes, a <em>Matcher</em> for matching the incoming request to a route, and a <em>Generator</em> for generating paths from routes. (There are other support objects available as well.)</p>
+<p>You can then retrieve a <em>Map</em> for adding routes, a <em>Matcher</em> for matching the incoming request to a route, and a <em>Generator</em> for generating paths from routes.</p>
 <p>Let's go step-by-step to add a route, match a request against it, and dispatch it.</p>
 <h2 id="1.1.1">1.1.1. Adding A Route</h2>
 <p>To add a route, first retrieve the <em>Map</em> from the <em>RouterContainer</em>.</p>
